--- a/resume.html
+++ b/resume.html
@@ -1,1 +1,53 @@
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Resume | Your Name</title>
+  <link rel="stylesheet" href="css/styles.css" />
+</head>
+<body>
+<header>
+  <div class="container navbar">
+    <div class="brand">
+      <strong>Your Name</strong>
+      <span>EE + Applied Math • Embedded • Sensors • Signal Processing</span>
+    </div>
+    <nav class="navlinks">
+      <a class="btn" href="index.html">Home</a>
+      <div class="dropdown">
+        <button class="btn">Menu ▾</button>
+        <div class="dropdown-menu">
+          <a href="projects.html">Projects</a>
+          <a href="research.html">Research</a>
+          <a href="resume.html">Resume</a>
+          <a href="contact.html">Contact</a>
+        </div>
+      </div>
+    </nav>
+  </div>
+</header>
+
+<main class="container">
+  <div class="card">
+    <h1 class="h1">Resume</h1>
+    <p class="muted">Download or view below.</p>
+    <a class="btn" href="assets/Resume.pdf" target="_blank" rel="noreferrer">Open PDF</a>
+
+    <hr />
+
+    <iframe
+      title="Resume PDF"
+      src="assets/Resume.pdf"
+      style="width:100%; height: 78vh; border: 1px solid rgba(255,255,255,.12); border-radius: 14px;"
+    ></iframe>
+  </div>
+</main>
+
+<footer class="container">
+  <small>© <span id="y"></span> Your Name</small>
+</footer>
+<script>document.getElementById("y").textContent = new Date().getFullYear();</script>
+</body>
+</html>
 
