--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,49 @@
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Contact | Your Name</title>
+  <link rel="stylesheet" href="css/styles.css" />
+</head>
+<body>
+<header>
+  <div class="container navbar">
+    <div class="brand">
+      <strong>Your Name</strong>
+      <span>EE + Applied Math • Embedded • Sensors • Signal Processing</span>
+    </div>
+    <nav class="navlinks">
+      <a class="btn" href="index.html">Home</a>
+      <div class="dropdown">
+        <button class="btn">Menu ▾</button>
+        <div class="dropdown-menu">
+          <a href="projects.html">Projects</a>
+          <a href="research.html">Research</a>
+          <a href="resume.html">Resume</a>
+          <a href="contact.html">Contact</a>
+        </div>
+      </div>
+    </nav>
+  </div>
+</header>
+
+<main class="container">
+  <div class="card">
+    <h1 class="h1">Contact</h1>
+    <p class="muted">Fastest way to reach me:</p>
+    <ul>
+      <li>Email: <a href="mailto:you@email.com">you@email.com</a></li>
+      <li>LinkedIn: <a href="#" target="_blank" rel="noreferrer">Your LinkedIn</a></li>
+      <li>GitHub: <a href="#" target="_blank" rel="noreferrer">Your GitHub</a></li>
+    </ul>
+  </div>
+</main>
+
+<footer class="container">
+  <small>© <span id="y"></span> Your Name</small>
+</footer>
+<script>document.getElementById("y").textContent = new Date().getFullYear();</script>
+</body>
+</html>
 
