--- a/projects/index.html
+++ b/projects/index.html
@@ -1,1 +1,197 @@
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Projects | Your Name</title>
+  <link rel="stylesheet" href="../css/styles.css" />
+</head>
+
+<body>
+<header>
+  <div class="container navbar">
+    <div class="brand">
+      <strong>Your Name</strong>
+      <span>EE + Applied Math • Embedded • Sensors • Signal Processing</span>
+    </div>
+
+    <!-- Project-page navbar (note ../ for root pages) -->
+    <nav class="navlinks">
+      <a class="btn" href="../index.html">Home</a>
+
+      <div class="dropdown">
+        <button class="btn" aria-haspopup="true" aria-expanded="false">
+          Projects ▾
+        </button>
+        <div class="dropdown-menu" role="menu" aria-label="Projects navigation">
+          <a href="index.html">All Projects</a>
+          <a href="foundation-monitoring.html">Foundation Monitoring System</a>
+          <a href="space-lab-hab.html">Space Lab / HAB</a>
+          <a href="vlsi-adder.html">VLSI 8-bit Adder</a>
+          <a href="pid-controls.html">PID / Controls</a>
+          <a href="sensor-filtering-research.html">Filtering + Sensor Analysis</a>
+        </div>
+      </div>
+
+      <div class="dropdown">
+        <button class="btn" aria-haspopup="true" aria-expanded="false">
+          Menu ▾
+        </button>
+        <div class="dropdown-menu" role="menu" aria-label="Site navigation">
+          <a href="../research.html">Research</a>
+          <a href="../resume.html">Resume</a>
+          <a href="../contact.html">Contact</a>
+        </div>
+      </div>
+    </nav>
+  </div>
+</header>
+
+<main class="container">
+  <div class="card">
+    <h1 class="h1">Projects</h1>
+    <p class="muted">
+      A curated set of projects showing hands-on work across embedded systems, sensors,
+      signal processing, and design documentation. Each card links to a full write-up.
+    </p>
+
+    <div class="tagrow">
+      <span class="tag">Embedded</span>
+      <span class="tag">Sensor Fusion</span>
+      <span class="tag">DSP / Filtering</span>
+      <span class="tag">PCB + Validation</span>
+      <span class="tag">Controls</span>
+      <span class="tag">VLSI</span>
+    </div>
+  </div>
+
+  <section class="grid" style="margin-top:16px;">
+    <!-- Card 1 -->
+    <article class="card col-12">
+      <h2 class="h2">Foundation Monitoring System</h2>
+      <p class="muted">Multi-sensor displacement monitoring • Real-time pipeline • UI visualization</p>
+
+      <p>
+        Built and validated a scalable data-processing workflow for IMU, ToF, radar, and auxiliary sensors.
+        Focused on filtering, time alignment, and producing a stable displacement metric for visualization and alerting.
+      </p>
+
+      <div class="tagrow">
+        <span class="tag">MQTT</span>
+        <span class="tag">InfluxDB/Grafana</span>
+        <span class="tag">Kalman/Hampel/EMA</span>
+        <span class="tag">Sensor Fusion</span>
+      </div>
+
+      <div style="margin-top:12px;">
+        <a class="btn" href="foundation-monitoring.html">Open project →</a>
+      </div>
+    </article>
+
+    <!-- Card 2 -->
+    <article class="card col-12">
+      <h2 class="h2">Space Lab / HAB Scatter Detector</h2>
+      <p class="muted">Optical scatter sensing • PCB + chamber integration • Constraints-driven design</p>
+
+      <p>
+        Designed and tested an optical scatter detector concept under strict size, mass, and power constraints
+        for a high-altitude balloon payload. Emphasis on signal chain behavior and practical integration.
+      </p>
+
+      <div class="tagrow">
+        <span class="tag">PCB</span>
+        <span class="tag">Analog Front-End</span>
+        <span class="tag">ADC</span>
+        <span class="tag">Testing + Validation</span>
+      </div>
+
+      <div style="margin-top:12px;">
+        <a class="btn" href="space-lab-hab.html">Open project →</a>
+      </div>
+    </article>
+
+    <!-- Card 3 -->
+    <article class="card col-12">
+      <h2 class="h2">VLSI 8-bit Adder</h2>
+      <p class="muted">Layout + verification • Tradeoffs across area/delay/power</p>
+
+      <p>
+        Implemented an 8-bit adder in a VLSI layout workflow, verifying functionality and documenting design choices.
+        Highlighted tradeoffs and how small topology decisions affect timing and footprint.
+      </p>
+
+      <div class="tagrow">
+        <span class="tag">Microwind</span>
+        <span class="tag">CMOS Layout</span>
+        <span class="tag">Verification</span>
+      </div>
+
+      <div style="margin-top:12px;">
+        <a class="btn" href="vlsi-adder.html">Open project →</a>
+      </div>
+    </article>
+
+    <!-- Card 4 -->
+    <article class="card col-12">
+      <h2 class="h2">PID / Controls Design</h2>
+      <p class="muted">Controller design + simulation • Stability + tuning</p>
+
+      <p>
+        Designed and simulated PID control strategies for a higher-order plant, focusing on tuning approaches,
+        performance metrics, and stability constraints.
+      </p>
+
+      <div class="tagrow">
+        <span class="tag">Controls</span>
+        <span class="tag">PID</span>
+        <span class="tag">Simulation</span>
+      </div>
+
+      <div style="margin-top:12px;">
+        <a class="btn" href="pid-controls.html">Open project →</a>
+      </div>
+    </article>
+
+    <!-- Card 5 -->
+    <article class="card col-12">
+      <h2 class="h2">Filtering + Sensor Analysis</h2>
+      <p class="muted">Notebook-driven research • Before/after filtering comparisons • Feature extraction</p>
+
+      <p>
+        Built a modular notebook workflow for sensor ingestion, cleaning, filtering, synchronization, and export.
+        Compared filtering strategies and documented when each technique performs best.
+      </p>
+
+      <div class="tagrow">
+        <span class="tag">Python</span>
+        <span class="tag">Jupyter</span>
+        <span class="tag">DSP</span>
+        <span class="tag">Feature Engineering</span>
+      </div>
+
+      <div style="margin-top:12px;">
+        <a class="btn" href="sensor-filtering-research.html">Open project →</a>
+      </div>
+    </article>
+  </section>
+
+  <div class="card" style="margin-top:16px;">
+    <h2 class="h2">Want the short version?</h2>
+    <p class="muted">
+      If you’re scanning quickly: start with Foundation Monitoring System (most complete end-to-end),
+      then Space Lab/HAB (constraints + integration), then one of Controls/VLSI depending on the role.
+    </p>
+    <a class="btn" href="../resume.html">Resume →</a>
+    <a class="btn" href="../contact.html">Contact →</a>
+  </div>
+</main>
+
+<footer class="container">
+  <small>© <span id="y"></span> Your Name</small>
+</footer>
+<script>
+  document.getElementById("y").textContent = new Date().getFullYear();
+</script>
+</body>
+</html>
 
