--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           Menu ▾
         </button>
         <div class="dropdown-menu" role="menu" aria-label="Site navigation">
-          <a href="projects.html">Projects</a>
+          <a href="projects/index.html">Projects</a>
           <a href="research.html">Research</a>
           <a href="resume.html">Resume</a>
           <a href="contact.html">Contact</a>
