--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Home | Your Name</title>
+  <title>Home | K. Sloan Louden-Robins</title>
   <link rel="stylesheet" href="css/styles.css" />
 </head>
 
@@ -36,7 +36,7 @@
 <main class="container">
   <section class="grid">
     <div class="card col-7">
-      <h1 class="h1">Hi, I’m Your Name.</h1>
+      <h1 class="h1">Hi, I’m Sloan.</h1>
       <p class="muted">
         I build sensor-driven systems and data pipelines—from embedded firmware and PCB integration
         to filtering, feature extraction, and visualization.
