--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <header>
   <div class="container navbar">
     <div class="brand">
-      <strong>Your Name</strong>
+      <strong>K. Sloan Louden-Robins</strong>
       <span>EE + Applied Math • Embedded • Sensors • Signal Processing</span>
     </div>
 
