--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 </main>
 
 <footer class="container">
-  <small>© <span id="y"></span> Your Name • Built with HTML/CSS • Hosted free</small>
+  <small>© <span id="y"></span> K. Sloan Louden-Robins • Built with HTML/CSS • Hosted free</small>
 </footer>
 
 <script>
