--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
     <div class="card col-7">
       <h1 class="h1">Hi, I’m Sloan.</h1>
       <p class="muted">
-        I build sensor-driven systems and data pipelines—from embedded firmware and PCB integration
-        to filtering, feature extraction, and visualization.
+        I’m an Electrical Engineering and Applied Mathematics graduate from Texas State University with hands-on experience in hardware systems, signal analysis, and embedded development through project-based and research work. I’m motivated by design-driven engineering problems and enjoy using creative problem solving to optimize performance, reliability, and efficiency in complex systems.
       </p>
 
       <div class="tagrow">
