--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
     <div class="card col-7">
       <h1 class="h1">Hi, I’m Sloan.</h1>
       <p class="muted">
-        I’m an Electrical Engineering and Applied Mathematics graduate from Texas State University with hands-on experience in hardware systems, signal analysis, and embedded development through project-based and research work. I’m motivated by design-driven engineering problems and enjoy using creative problem solving to optimize performance, reliability, and efficiency in complex systems.
+        I’m an Electrical Engineering and Applied Mathematics graduate from Texas State University 
+        with hands-on experience in hardware systems, signal analysis, and embedded development through 
+        project-based and research work. I’m motivated by design-driven engineering problems and enjoy 
+        using creative problem solving to optimize performance, reliability, and efficiency in complex systems.
       </p>
 
       <div class="tagrow">
@@ -66,7 +69,6 @@
         <li><strong>Space Lab / HAB:</strong> custom scatter detector + constraints-driven design</li>
         <li><strong>VLSI:</strong> 8-bit adder layout + verification</li>
       </ul>
-      <p class="muted">Update these bullets to match your best 3.</p>
     </div>
   </section>
 </main>
