--- a/index.html
+++ b/index.html
@@ -73,6 +73,22 @@
   </section>
 </main>
 
+    <div class="card col-5">
+      <h2 class="h2">Experience</h2>
+      <p>
+        My experience includes working with IMUs, time-of-flight sensors, pulsed coherent radar (PCR), and environmental sensors, supporting both hardware integration and software-side data processing. 
+        This includes a Space Lab project involving the design and validation of a scatter detector chamber and custom PCB to measure CO₂ concentration in ambient air, integrated into a high-altitude balloon 
+        (HAB) system and developed under strict power, mass, and environmental constraints.
+
+        I also completed a semester-long research project on Fourier series, focused on signal decomposition and frequency-domain behavior in physical measurement systems, strengthening my foundation in applied signal processing.
+
+        As part of my capstone project, I worked on a multi-sensor system focused on long-term monitoring of small shifts in a home’s foundation, with an emphasis on data reliability through system integration, 
+        testing, and analysis. I also served in a project leadership role, coordinating testing efforts, documentation, and cross-subsystem communication across a multi-disciplinary team.
+
+        In addition, I’ve applied machine learning techniques in Python to IMU and PCR signal processing tasks, supporting feature extraction, noise characterization, and data-driven analysis alongside traditional filtering methods.
+      <p>
+    </div>
+
 <footer class="container">
   <small>© <span id="y"></span> K. Sloan Louden-Robins • Built with HTML/CSS • Hosted free</small>
 </footer>
