--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     </div>
 
 <footer class="container">
-  <small>© <span id="y"></span> K. Sloan Louden-Robins • Built with HTML/CSS • Hosted free</small>
+  <small>© <span id="y"></span> Kimberly Sloan Louden-Robins • Built with HTML/CSS • Hosted free</small>
 </footer>
 
 <script>
