--- a/contact.html
+++ b/contact.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Contact | Your Name</title>
+  <title>Contact | K. Sloan Louden-Robins</title>
   <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
 <header>
   <div class="container navbar">
     <div class="brand">
-      <strong>Your Name</strong>
+      <strong>Sloan Louden-Robins</strong>
       <span>EE + Applied Math • Embedded • Sensors • Signal Processing</span>
     </div>
     <nav class="navlinks">
@@ -41,7 +41,7 @@
 </main>
 
 <footer class="container">
-  <small>© <span id="y"></span> Your Name</small>
+  <small>© <span id="y"></span> Kimberly Sloan Louden-Robins</small>
 </footer>
 <script>document.getElementById("y").textContent = new Date().getFullYear();</script>
 </body>
