--- a/projects/index.html
+++ b/projects/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Projects | Your Name</title>
+  <title>Projects | K. Sloan Louden-Robins</title>
   <link rel="stylesheet" href="../css/styles.css" />
 </head>
 
@@ -11,7 +11,7 @@
 <header>
   <div class="container navbar">
     <div class="brand">
-      <strong>Your Name</strong>
+      <strong>Sloan Louden-Robins</strong>
       <span>EE + Applied Math • Embedded • Sensors • Signal Processing</span>
     </div>
 
@@ -187,7 +187,7 @@
 </main>
 
 <footer class="container">
-  <small>© <span id="y"></span> Your Name</small>
+  <small>© <span id="y"></span> Kimberly Sloan Louden-Robins</small>
 </footer>
 <script>
   document.getElementById("y").textContent = new Date().getFullYear();
