--- a/resume.html
+++ b/resume.html
@@ -18,7 +18,7 @@
       <div class="dropdown">
         <button class="btn">Menu ▾</button>
         <div class="dropdown-menu">
-          <a href="projects.html">Projects</a>
+          <a href="projects/index.html">Projects</a>
           <a href="research.html">Research</a>
           <a href="resume.html">Resume</a>
           <a href="contact.html">Contact</a>
