--- a/home.html
+++ b/home.html
@@ -16,14 +16,14 @@
     </div>
 
     <nav class="navlinks">
-      <a class="btn" href="index.html">Home</a>
+      <a class="btn" href="home.html">Home</a>
 
       <div class="dropdown">
         <button class="btn" aria-haspopup="true" aria-expanded="false">
           Menu ▾
         </button>
         <div class="dropdown-menu" role="menu" aria-label="Site navigation">
-          <a href="projects/index.html">Projects</a>
+          <a href="projects/home.html">Projects</a>
           <a href="research.html">Research</a>
           <a href="resume.html">Resume</a>
           <a href="contact.html">Contact</a>
