--- a/projects/home.html
+++ b/projects/home.html
@@ -17,14 +17,14 @@
 
     <!-- Project-page navbar (note ../ for root pages) -->
     <nav class="navlinks">
-      <a class="btn" href="../index.html">Home</a>
+      <a class="btn" href="../home.html">Home</a>
 
       <div class="dropdown">
         <button class="btn" aria-haspopup="true" aria-expanded="false">
           Projects ▾
         </button>
         <div class="dropdown-menu" role="menu" aria-label="Projects navigation">
-          <a href="index.html">All Projects</a>
+          <a href="home.html">All Projects</a>
           <a href="foundation-monitoring.html">Foundation Monitoring System</a>
           <a href="space-lab-hab.html">Space Lab / HAB</a>
           <a href="vlsi-adder.html">VLSI 8-bit Adder</a>
