--- a/contact.html
+++ b/contact.html
@@ -14,11 +14,11 @@
       <span>EE + Applied Math • Embedded • Sensors • Signal Processing</span>
     </div>
     <nav class="navlinks">
-      <a class="btn" href="index.html">Home</a>
+      <a class="btn" href="home.html">Home</a>
       <div class="dropdown">
         <button class="btn">Menu ▾</button>
         <div class="dropdown-menu">
-          <a href="projects/index.html">Projects</a>
+          <a href="projects/home.html">Projects</a>
           <a href="research.html">Research</a>
           <a href="resume.html">Resume</a>
           <a href="contact.html">Contact</a>
