--- a/projects/foundation-monitoring.html
+++ b/projects/foundation-monitoring.html
@@ -1,6 +1,6 @@
 <div style="position:relative; padding-top:56.25%; border-radius:14px; overflow:hidden; border:1px solid rgba(255,255,255,.12); margin-top:12px;">
   <iframe
-    src="https://youtube/embed/hQlcKNhDb_U"
+    src="https://www.youtube.com/watch?v=2DTSJoVn8F8"
     title="Foundation Monitoring System Elevator Pitch"
     style="position:absolute; inset:0; width:100%; height:100%; border:0;"
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
