--- a/projects/foundation-monitoring.html
+++ b/projects/foundation-monitoring.html
@@ -26,7 +26,7 @@
         <div class="dropdown-menu" role="menu" aria-label="Projects navigation">
           <a href="home.html">All Projects</a>
           <a href="foundation-monitoring.html">Foundation Monitoring System</a>
-          <a href="space-lab-hab.html">Space Lab / HAB</a>
+          <a href="projects/HAB-scatter-detector.html">Space Lab / HAB</a>
           <a href="vlsi-adder.html">VLSI 8-bit Adder</a>
           <a href="pid-controls.html">PID / Controls</a>
           <a href="sensor-filtering-research.html">Filtering + Sensor Analysis</a>
