--- a/projects/home.html
+++ b/projects/home.html
@@ -27,7 +27,7 @@
           <a href="home.html">All Projects</a>
           <a href="foundation-monitoring.html">Foundation Monitoring System</a>
           <a href="space-lab-hab.html">Space Lab / HAB</a>
-          <a href="vlsi-adder.html">VLSI 8-bit Adder</a>
+          <a href="VLSI-8bit-full-adder.html">VLSI 8-bit Adder</a>
           <a href="pid-controls.html">PID / Controls</a>
           <a href="sensor-filtering-research.html">Filtering + Sensor Analysis</a>
         </div>
