--- a/projects/home.html
+++ b/projects/home.html
@@ -26,10 +26,9 @@
         <div class="dropdown-menu" role="menu" aria-label="Projects navigation">
           <a href="home.html">All Projects</a>
           <a href="foundation-monitoring.html">Foundation Monitoring System</a>
-          <a href="space-lab-hab.html">Space Lab / HAB</a>
+          <a href="HAB-scatter-detector.html">Space Lab / HAB</a>
           <a href="VLSI-8bit-full-adder.html">VLSI 8-bit Adder</a>
-          <a href="pid-controls.html">PID / Controls</a>
-          <a href="sensor-filtering-research.html">Filtering + Sensor Analysis</a>
+          <a href="PID-controls.html">PID / Controls</a>
         </div>
       </div>
 
