--- a/projects/foundation-monitoring.html
+++ b/projects/foundation-monitoring.html
@@ -63,9 +63,26 @@
     allowfullscreen
   ></iframe>
 </div>
-    
-</main>
+  
+  <section class="grid" style="margin-top:16px;">
+    <!-- Card 1 -->
+    <article class="card col-12">
+      <h2 class="h2">Foundation Monitoring System</h2>
+      <p class="muted">Multi-sensor displacement monitoring • Real-time pipeline • UI visualization</p>
 
+      <p>
+        Built and validated a scalable data-processing workflow for IMU, ToF, radar, and auxiliary sensors.
+        Focused on filtering, time alignment, and producing a stable displacement metric for visualization and alerting.
+      </p>
+
+      <div class="tagrow">
+        <span class="tag">MQTT</span>
+        <span class="tag">InfluxDB/Grafana</span>
+        <span class="tag">Kalman/Hampel/EMA</span>
+        <span class="tag">Sensor Fusion</span>
+      </div>
+  </main>
+      
 <footer class="container">
   <small>© <span id="y"></span> Kimberly Sloan Louden-Robins</small>
 </footer>
