--- a/home.html
+++ b/home.html
@@ -58,7 +58,7 @@
         <a href="projects.html">Projects</a>.
       </p>
 
-      <a class="btn" href="projects.html">See Projects →</a>
+      <a class="btn" href="projects/home.html">See Projects →</a>
       <a class="btn" href="resume.html">Resume →</a>
     </div>
     
