--- a/projects/foundation-monitoring.html
+++ b/projects/foundation-monitoring.html
@@ -27,7 +27,7 @@
           <a href="home.html">All Projects</a>
           <a href="foundation-monitoring.html">Foundation Monitoring System</a>
           <a href="HAB-scatter-detector.html">Space Lab / HAB</a>
-          <a href="vlsi-adder.html">VLSI 8-bit Adder</a>
+          <a href="VLSI-8bit-full-adder.html">VLSI 8-bit Adder</a>
           <a href="PID-controls.html">PID / Controls</a>
         </div>
       </div>
