--- a/projects/VLSI-8bit-full-adder.html
+++ b/projects/VLSI-8bit-full-adder.html
@@ -1,1 +1,81 @@
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Projects | K. Sloan Louden-Robins</title>
+  <link rel="stylesheet" href="../css/styles.css" />
+</head>
 
+<body>
+<header>
+  <div class="container navbar">
+    <div class="brand">
+      <strong>Sloan Louden-Robins</strong>
+      <span>EE + Applied Math • Embedded • Sensors • Signal Processing</span>
+    </div>
+
+    <!-- Project-page navbar (note ../ for root pages) -->
+    <nav class="navlinks">
+      <a class="btn" href="../home.html">Home</a>
+
+      <div class="dropdown">
+        <button class="btn" aria-haspopup="true" aria-expanded="false">
+          Projects ▾
+        </button>
+        <div class="dropdown-menu" role="menu" aria-label="Projects navigation">
+          <a href="home.html">All Projects</a>
+          <a href="foundation-monitoring.html">Foundation Monitoring System</a>
+          <a href="HAB-scatter-detector.html">Space Lab / HAB</a>
+          <a href="VLSI-8bit-full-adder.html">VLSI 8-bit Adder</a>
+          <a href="PID-controls.html">PID / Controls</a>
+        </div>
+      </div>
+
+      <div class="dropdown">
+        <button class="btn" aria-haspopup="true" aria-expanded="false">
+          Menu ▾
+        </button>
+        <div class="dropdown-menu" role="menu" aria-label="Site navigation">
+          <a href="../research.html">Research</a>
+          <a href="../resume.html">Resume</a>
+          <a href="../contact.html">Contact</a>
+        </div>
+      </div>
+    </nav>
+  </div>
+</header>
+
+<main class="container">
+  <div class="card">
+    <h1 class="h1">As Above So Below - Foundation Monitoring System</h1>
+    <p class="muted">
+      [Insert project description here]
+    </p>
+  
+  <section class="grid" style="margin-top:16px;">
+    <!-- Card 1 -->
+    <article class="card col-12">
+      <h2 class="h2">VLSI - 8-bit Full Adder</h2>
+      <p class="muted">[descripter 1] • [descripter 2] • Microwind Design</p>
+
+      <p>
+        [Insert Text Here 1]
+      </p>
+
+      <div class="tagrow">
+        <span class="tag">[Tag that relates 1]</span>
+        <span class="tag">[Tag 2]</span>
+        <span class="tag">[Tag 3]</span>
+        <span class="tag">[Tag 4]</span>
+      </div>
+  </main>
+      
+<footer class="container">
+  <small>© <span id="y"></span> Kimberly Sloan Louden-Robins</small>
+</footer>
+<script>
+  document.getElementById("y").textContent = new Date().getFullYear();
+</script>
+</body>
+</html>
