--- a/projects/VLSI-8bit-full-adder.html
+++ b/projects/VLSI-8bit-full-adder.html
@@ -48,7 +48,7 @@
 
 <main class="container">
   <div class="card">
-    <h1 class="h1">As Above So Below - Foundation Monitoring System</h1>
+    <h1 class="h1">VLSI - 8-bit Full Adder</h1>
     <p class="muted">
       [Insert project description here]
     </p>
@@ -56,11 +56,11 @@
   <section class="grid" style="margin-top:16px;">
     <!-- Card 1 -->
     <article class="card col-12">
-      <h2 class="h2">VLSI - 8-bit Full Adder</h2>
+      <h2 class="h2">[Insert text 1]</h2>
       <p class="muted">[descripter 1] • [descripter 2] • Microwind Design</p>
 
       <p>
-        [Insert Text Here 1]
+        [Insert Text Here 2]
       </p>
 
       <div class="tagrow">
