--- a/resume.html
+++ b/resume.html
@@ -32,13 +32,13 @@
   <div class="card">
     <h1 class="h1">Resume</h1>
     <p class="muted">Download or view below.</p>
-    <a class="btn" href="assets/Resume.pdf" target="_blank" rel="noreferrer">Open PDF</a>
+    <a class="btn" href="assets/Sloan_Louden_Robins_EE_Resume.pdf" target="_blank" rel="noreferrer">Open PDF</a>
 
     <hr />
 
     <iframe
       title="Resume PDF"
-      src="assets/Resume.pdf"
+      src="assets/Sloan_Louden_Robins_EE_Resume.pdf"
       style="width:100%; height: 78vh; border: 1px solid rgba(255,255,255,.12); border-radius: 14px;"
     ></iframe>
   </div>
