--- a/projects/home.html
+++ b/projects/home.html
@@ -105,7 +105,7 @@
       </div>
 
       <div style="margin-top:12px;">
-        <a class="btn" href="space-lab-hab.html">Open project →</a>
+        <a class="btn" href="HAB-scatter-detector.html">Open project →</a>
       </div>
     </article>
 
@@ -126,7 +126,7 @@
       </div>
 
       <div style="margin-top:12px;">
-        <a class="btn" href="vlsi-adder.html">Open project →</a>
+        <a class="btn" href="VLSI-8bit-full-adder.html">Open project →</a>
       </div>
     </article>
 
@@ -147,29 +147,7 @@
       </div>
 
       <div style="margin-top:12px;">
-        <a class="btn" href="pid-controls.html">Open project →</a>
-      </div>
-    </article>
-
-    <!-- Card 5 -->
-    <article class="card col-12">
-      <h2 class="h2">Filtering + Sensor Analysis</h2>
-      <p class="muted">Notebook-driven research • Before/after filtering comparisons • Feature extraction</p>
-
-      <p>
-        Built a modular notebook workflow for sensor ingestion, cleaning, filtering, synchronization, and export.
-        Compared filtering strategies and documented when each technique performs best.
-      </p>
-
-      <div class="tagrow">
-        <span class="tag">Python</span>
-        <span class="tag">Jupyter</span>
-        <span class="tag">DSP</span>
-        <span class="tag">Feature Engineering</span>
-      </div>
-
-      <div style="margin-top:12px;">
-        <a class="btn" href="sensor-filtering-research.html">Open project →</a>
+        <a class="btn" href="PID-controls.html">Open project →</a>
       </div>
     </article>
   </section>
