--- a/home.html
+++ b/home.html
@@ -61,13 +61,15 @@
       <a class="btn" href="projects/home.html">See Projects →</a>
       <a class="btn" href="resume.html">Resume →</a>
     </div>
-          <h2 class="h2">Highlights</h2>
+    <div class="card col-5">
+      <h2 class="h2">Highlights</h2>
       <ul>
         <li><strong>Foundation Monitoring System:</strong> multi-sensor displacement tracking + UI pipeline</li>
         <li><strong>Space Lab / HAB:</strong> custom scatter detector + constraints-driven design</li>
         <li><strong>VLSI:</strong> 8-bit adder layout + verification</li>
       </ul>
     </div>
+  </section>
     
     <div class="card col-5">
       <h2 class="h2">Experience</h2>
